fix head alignment, start 2nd row

--- a/style.css
+++ b/style.css
@@ -9,14 +9,14 @@ body {
     display: flex;
     align-items: center;
 }
-.header-list {
-   margin-left: auto;
-   
-   
-}
 ul {
     display: flex;
     text-decoration: none;
     list-style: none;
     gap: 10px;
+    margin-left: auto;
+}
+
+.firstrow {
+    display: flex;
 }
